// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProjectsPage > renders correctly with empty projects 1`] = `
<div>
  <div
    class="min-h-screen bg-background"
  >
    <header
      class="border-b border-border bg-card"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-4"
          >
            <a
              class="flex items-center gap-2 text-muted-foreground hover:text-foreground transition-colors"
              href="/"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 19l-7-7m0 0l7-7m-7 7h18"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              common.back
            </a>
            <h1
              class="text-2xl font-semibold text-foreground"
            >
              projects.title
            </h1>
          </div>
          <button
            class="flex items-center gap-2 px-4 py-2 bg-primary text-primary-foreground rounded-lg font-medium hover:opacity-90 transition-opacity"
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4v16m8-8H4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            projects.newProject
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="text-center py-16"
      >
        <div
          class="w-16 h-16 mx-auto mb-4 rounded-full bg-muted flex items-center justify-center"
        >
          <svg
            class="w-8 h-8 text-muted-foreground"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h3
          class="text-lg font-medium text-foreground mb-2"
        >
          projects.noProjects
        </h3>
        <p
          class="text-muted-foreground mb-4"
        >
          projects.createFirst
        </p>
        <button
          class="inline-flex items-center gap-2 px-4 py-2 bg-primary text-primary-foreground rounded-lg font-medium hover:opacity-90 transition-opacity"
        >
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4v16m8-8H4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          projects.createProject
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`ProjectsPage > renders correctly with error 1`] = `
<div>
  <div
    class="min-h-screen bg-background"
  >
    <header
      class="border-b border-border bg-card"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-4"
          >
            <a
              class="flex items-center gap-2 text-muted-foreground hover:text-foreground transition-colors"
              href="/"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 19l-7-7m0 0l7-7m-7 7h18"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              common.back
            </a>
            <h1
              class="text-2xl font-semibold text-foreground"
            >
              projects.title
            </h1>
          </div>
          <button
            class="flex items-center gap-2 px-4 py-2 bg-primary text-primary-foreground rounded-lg font-medium hover:opacity-90 transition-opacity"
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4v16m8-8H4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            projects.newProject
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="mb-6 p-4 rounded-lg bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 text-red-600 dark:text-red-400"
      >
        <div
          class="flex items-center gap-2"
        >
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          Failed to load
        </div>
      </div>
      <div
        class="text-center py-16"
      >
        <div
          class="w-16 h-16 mx-auto mb-4 rounded-full bg-muted flex items-center justify-center"
        >
          <svg
            class="w-8 h-8 text-muted-foreground"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </div>
        <h3
          class="text-lg font-medium text-foreground mb-2"
        >
          projects.noProjects
        </h3>
        <p
          class="text-muted-foreground mb-4"
        >
          projects.createFirst
        </p>
        <button
          class="inline-flex items-center gap-2 px-4 py-2 bg-primary text-primary-foreground rounded-lg font-medium hover:opacity-90 transition-opacity"
        >
          <svg
            class="w-5 h-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4v16m8-8H4"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          projects.createProject
        </button>
      </div>
    </main>
  </div>
</div>
`;

exports[`ProjectsPage > renders correctly with projects 1`] = `
<div>
  <div
    class="min-h-screen bg-background"
  >
    <header
      class="border-b border-border bg-card"
    >
      <div
        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-4"
          >
            <a
              class="flex items-center gap-2 text-muted-foreground hover:text-foreground transition-colors"
              href="/"
            >
              <svg
                class="w-5 h-5"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 19l-7-7m0 0l7-7m-7 7h18"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              common.back
            </a>
            <h1
              class="text-2xl font-semibold text-foreground"
            >
              projects.title
            </h1>
          </div>
          <button
            class="flex items-center gap-2 px-4 py-2 bg-primary text-primary-foreground rounded-lg font-medium hover:opacity-90 transition-opacity"
          >
            <svg
              class="w-5 h-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4v16m8-8H4"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
            projects.newProject
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8"
    >
      <div
        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
      >
        <div
          class="group relative bg-card rounded-xl border border-border p-6 hover:shadow-lg hover:border-primary/20 transition-all"
        >
          <div
            class="flex items-start justify-between mb-4"
          >
            <div
              class="w-12 h-12 rounded-lg bg-primary/10 flex items-center justify-center"
            >
              <svg
                class="w-6 h-6 text-primary"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <button
              class="opacity-0 group-hover:opacity-100 p-2 rounded-lg text-muted-foreground hover:text-red-500 hover:bg-red-50 dark:hover:bg-red-900/20 transition-all"
              title="common.delete"
            >
              <svg
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <a
            class="block"
            href="/?project=project-1"
          >
            <h3
              class="text-lg font-semibold text-foreground mb-1 hover:text-primary transition-colors"
            >
              Test Project 1
            </h3>
            <p
              class="text-sm text-muted-foreground mb-3 line-clamp-2"
            >
              Description 1
            </p>
            <div
              class="flex items-center gap-2 text-xs text-muted-foreground"
            >
              <svg
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              projects.created
               
              2024年1月1日
            </div>
          </a>
        </div>
        <div
          class="group relative bg-card rounded-xl border border-border p-6 hover:shadow-lg hover:border-primary/20 transition-all"
        >
          <div
            class="flex items-start justify-between mb-4"
          >
            <div
              class="w-12 h-12 rounded-lg bg-primary/10 flex items-center justify-center"
            >
              <svg
                class="w-6 h-6 text-primary"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
            <button
              class="opacity-0 group-hover:opacity-100 p-2 rounded-lg text-muted-foreground hover:text-red-500 hover:bg-red-50 dark:hover:bg-red-900/20 transition-all"
              title="common.delete"
            >
              <svg
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
          <a
            class="block"
            href="/?project=project-2"
          >
            <h3
              class="text-lg font-semibold text-foreground mb-1 hover:text-primary transition-colors"
            >
              Test Project 2
            </h3>
            <div
              class="flex items-center gap-2 text-xs text-muted-foreground"
            >
              <svg
                class="w-4 h-4"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
              projects.created
               
              2024年1月2日
            </div>
          </a>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`ProjectsPage > renders loading state initially 1`] = `
<div>
  <div
    class="min-h-screen bg-background flex items-center justify-center"
  >
    <div
      class="flex items-center gap-2 text-muted-foreground"
    >
      <div
        class="w-5 h-5 border-2 border-current border-t-transparent rounded-full animate-spin"
      />
      common.loading
    </div>
  </div>
</div>
`;
